<resources>
    <string name="app_name">NARMM</string>
    <string name="currency">રુપિયા\u0020</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_terms">Terms &amp; Conditions</string>
    <string name="playStore_address" translatable="false"></string>
    <string name="nav_home">Home</string>
    <string name="nav_user">User</string>
    <string name="nav_order">My Orders</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About Us</string>
    <string name="nav_payment">Wallet</string>
    <string name="nav_availability">Check Availability</string>
    <string name="nav_review">Review Us</string>
    <string name="nav_share">Share with Friends</string>
    <string name="nav_notify">Offer</string>
    <string name="nav_logout">Logout</string>
    <string name="order">My Orders</string>
    <string name="nav_trail_pop">Trail pop</string>
    <string name="nav_narmm_pro">Narmm products</string>
    <string name="nav_whether">Whether</string>
    <string name="nav_ask_an_expert">Ask an expert</string>
    <string name="nav_helpline">Helpline</string>
    <string name="nav_mandi">Mandi</string>
    <string name="nav_local_retailer">Local retailer</string>
    <string name="nav_complain">Complain</string>
    <string name="et_login_phone_hint">Mobile Number (Required)</string>
    <string name="tv_login_email">Email (Required)</string>
    <string name="tv_login_password">Password (Required)</string>
    <string name="btn_login">Login</string>
    <string name="btn_send">Send</string>
    <string name="tv_login_note">Before continue with application you must verify your mobile number. Our system will sent you OTP code on registered mobile number</string>
    <string name="tv_reg">Register</string>
    <string name="tv_reg_name_hint">Name (Required)</string>
    <string name="tv_reg_pincode">Pincode (Required)</string>
    <string name="tv_reg_socity">City(Required)</string>
    <string name="btn_reg_socity_choose">Choose City</string>
    <string name="tv_reg_house">Full Address(Required)</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Search City</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Address(Required)</string>
    <string name="et_reg_address">Complete Address</string>
    <string name="tv_cart_title">Cart</string>
    <string name="tv_cart_clear">Clear All Product</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">ટોટલ :\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rs</string>
    <string name="tv_del_title">Delivery Date/Time</string>
    <string name="tv_del_address">Delivery Address</string>
    <string name="tv_del_address1">Delivery Address:</string>
    <string name="et_del_address_hint">Enter Delivery address..</string>
    <string name="tv_del_continue">Continue With Time</string>
    <string name="tv_del_date">Select Delivery Date</string>
    <string name="tv_del_time">Select Delivery Time</string>
    <string name="tv_del_date_time">Delivery Date/Time</string>
    <string name="tv_total_item_amount">Total Items And Amount</string>
    <string name="tv_total_total">Total Amount </string>
    <string name="tv_home_cat">Offer Product</string>
    <string name="tv_home_view">View all ></string>
    <string name="tv_pro_add">Add To Cart</string>
    <string name="tv_pro_update">Update</string>
    <string name="tv_pro_price">\u0020</string>
    <string name="tv_pro">Price \u0020</string>
    <string name="tv_pro_rs">\u0020Rs.\u0020</string>
    <string name="tv_pro_total">Total: </string>
    <string name="tv_conf_order_title">Payment Details</string>
    <string name="tv_order_cancle">Cancel Order</string>
    <string name="tv_order_summery">Summary</string>
    <string name="tv_order_total">Total: Rs.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="tv_order_rs">Rs.</string>
    <string name="tv_thanks_title">Thank you for your order.</string>
    <string name="tv_thanks_home">Continue home</string>
    <string name="tv_thanks_order">Track my order</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="my_order">My Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_payment">My Payment</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_date">"Delivery Date: </string>
    <string name="please_select_date">Please select date</string>
    <string name="no_rcord_found">No record found</string>
    <string name="connection_time_out">Connection Time out</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="order_now">COD</string>
    <string name="order_now1">pay now</string>
    <string name="payment_detail">Payment Details</string>
    <string name="delivery_time">Delivery time</string>
    <string name="please_enter_pincode">Please enter pincode</string>
    <string name="receiver_mobile_number">Receiver Mobile Number(Required)</string>
    <string name="receiver_name_req">Receiver Name(Required)</string>
    <string name="phone_too_short">Phone Too short</string>
    <string name="please_add_address">Please add address</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_select_date_time">Please select date and time</string>
    <string name="profile_updated">Profile updated</string>
    <string name="uploading_profile_data">Uploading profile data</string>
    <string name="cancle_order_note">Are you sure!\nyou want to cancle order ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="thank_you">Thank you</string>
    <string name="order_details">Order Details</string>
    <string name="password_too_short">Password Too short</string>
    <string name="invalide_email_address">Invalide Email Address</string>
    <string name="no_internet">Sorry! Not connected to internet</string>
    <string name="order_no">Order No.:\u0020</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="delivered">Delivered</string>
    <string name="cancle">Cancel</string>
    <string name="date"> Date:\u0020</string>
    <string name="time"> Time:\u0020</string>
    <string name="date1"> Date:\u0020</string>
    <string name="time1"> Time:\u0020</string>
    <string name="search_msg">Search Vegetables, Fruit etc</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password (Required)</string>
    <string name="new_password">New Password (Required)</string>
    <string name="confirm_password">Confirm Password (Required)</string>
    <string name="password_not_same">Confirm Password and New Password not same.</string>
    <string name="delivery_charge">Delivery Charges.:\u0020</string>
    <string name="amount">Amount:\u0020</string>
    <string name="search_here">Search here...</string>
    <string name="total_amount">Total Amount:\u0020</string>
    <string name="search">Search</string>
    <string name="enter_keyword">Please Enter Keyword</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="description">Description:</string>
    <string name="tv_deli_socity">City:</string>
    <string name="tv_deli_mobile">Mobile No.:</string>
    <string name="tv_deli_pin">Pincode:</string>
    <string name="tv_deli_pay_ontime">On time :\u0020</string>
    <string name="tv_deli_pay_address">Address:\u0020</string>
    <string name="reciver_name">Receiver Name:\u0020</string>
    <string name="reciver_mobile">Receiver Mobile No.:\u0020</string>
    <string name="pincode">Pincode:\u0020</string>
    <string name="house_no">Delivery Address.:\u0020</string>
    <string name="socity">City:\u0020</string>
    <string name="mobile_verify_msg">We need your mobile number for registration purpose.\nYour Information will remain 100% secure.</string>
    <string name="acouont">Set your Pin</string>
    <string name="mobile_degit">Please enter 4 digit Protection Pin\n </string>
    <string name="resend_otp">After 13 secound you can Resend OTP.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">samsetdev.blogspot.com</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
    <string name="title">Title.:\u0020</string>
    <string name="des"> Description:\u0020</string>
    <string name="datee"> Date:\u0020</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of YOUR_APP_NAME is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\s now</string>
    <string name="update">Update</string>
    <string name="profile">NARMM is a agricultural company first company in India online cultivation crops as a like wheat rice, potato, maize sugar cane provide technology seed to harvesting uses Agro product as like Seed treatment insecticide fungicide growth promoter or fertilizer and micronutrients provide or time table is known as NARMM. NARMM is founder by Dr Ray Singh Pal in 8 Aug 2020.</string>
    <string name="mission">NARMM mission is to upgrade all agricultural crops solutions seed to harvesting problem any solution online technology Power of farmer growing crops minimum cast and maximum profit in the world</string>
    <string name="vission">NARMM is to be global platform when someone is looking for agriculture products or locally and according to site to site NARMM</string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="lang">
        <item>Select Language</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
</resources>