<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <!-- place one TextView and one EditText inside layout using weight property -->


        <TextView
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="4"
            android:gravity="center"
            android:background="@color/editTextBack"
            android:text="Happy Code: 2345ghtG"
            android:imeOptions="actionNext"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/blackColor" />


        <!-- place one TextView and one EditText inside layout using weight property -->



    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/xml_box_shadow_bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:shadowDx="1"
            android:fontFamily="@font/opificio"
            android:textStyle="bold"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/tv_thanks_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/tv_thank_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/opificio"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_thank_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/opificio"
                android:textStyle="bold"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/xml_button"
                android:text="@string/tv_thanks_home"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_thank_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/opificio"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/xml_button"
                android:text="@string/tv_thanks_order"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>